fix, layout broke before resize

--- a/src/components/Average/Average.css
+++ b/src/components/Average/Average.css
@@ -1,4 +1,4 @@
 .content__average {
-  flex-shrink: 0;
-  margin-right: 20px;
+  width: 200px;
+  align-self: center;
 }
