--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -1,6 +1,6 @@
 .content {
-  display: flex;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 200px;
 
   height: 100%;
 }
